--- a/index5.html
+++ b/index5.html
@@ -38,11 +38,11 @@
 
       <table class="table table-dark table-hover" id="table">
         <thead>
-          <tr>
-            <th>Nome</th>
+          <tr class="tr-th">
+            <th id="th-nome">Nome</th>
             <th>Nascimento</th>
             <th>Telefone</th>
-            <th>Saldo(R$)</th>
+            <th id="th-saldo" style="width: 143px;">Saldo(R$)</th>
             <th class="th-acoes">Ações</th>
           </tr>
         </thead>
@@ -107,6 +107,7 @@
 <!-- <script type='module' src="./scripts/criaCliente.js"></script> -->
 <!-- <script type="module" scr="./scripts/loadTabela.js"></script> -->
 <!-- <script type="module" src="./scripts/transacoes.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script type="module" src="./scripts/script.js"></script>
