--- a/filtra.html
+++ b/filtra.html
@@ -11,15 +11,15 @@
 <body>
 
     <nav class="nav nav-pills justify-content-end">
-        <a class="nav-item nav-link" href="./index5.html">Home</a>
+        <a class="nav-item nav-link" href="./index5.html">Clientes</a>
         <a class="nav-item nav-link active" href="./filtra.html">Filtrar</a>
         <a class="nav-item nav-link" href="./incluir.html">Incluir</a>
         <div class="dropdown">
         <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" href="#">Transações</a>
         <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Depositar</a>
-            <a class="dropdown-item" href="#">Sacar</a>
-            <a class="dropdown-item" href="#">Transferir</a>
+            <a class="dropdown-item" href="./depositar.html">Depositar</a>
+            <a class="dropdown-item" href="./sacar.html">Sacar</a>
+            <a class="dropdown-item" href="./transferir.html">Transferir</a>
         </div>
         </div>
     </nav>
@@ -49,7 +49,9 @@
     
 </body>
 
-<script type="module" src="./scripts/filtra.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script type="module" src="./scripts/filtra.js"></script>
 
 </html>
