--- a/incluir.html
+++ b/incluir.html
@@ -11,15 +11,15 @@
 <body>
 
   <nav class="nav nav-pills justify-content-end">
-    <a class="nav-item nav-link" href="./index5.html">Home</a>
+    <a class="nav-item nav-link" href="./index5.html">Clientes</a>
     <a class="nav-item nav-link" href="./filtra.html">Filtrar</a>
     <a class="nav-item nav-link active" href="./incluir.html">Incluir</a>
     <div class="dropdown">
     <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" href="#">Transações</a>
     <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Depositar</a>
-        <a class="dropdown-item" href="#">Sacar</a>
-        <a class="dropdown-item" href="#">Transferir</a>
+        <a class="dropdown-item" href="./depositar.html">Depositar</a>
+        <a class="dropdown-item" href="./sacar.html">Sacar</a>
+        <a class="dropdown-item" href="./transferir.html">Transferir</a>
     </div>
     </div>
   </nav>
