--- a/index5.html
+++ b/index5.html
@@ -12,7 +12,7 @@
 
   <ul class="nav nav-pills justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" href="./index5.html">Home</a>
+      <a class="nav-link active" href="./index5.html">Clientes</a>
     </li>
 
     <li class="nav-item">
@@ -26,13 +26,15 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Transações</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Depositar</a>
-        <a class="dropdown-item" href="#">Sacar</a>
-        <a class="dropdown-item" href="#">Transferir</a>
+        <a class="dropdown-item" href="./depositar.html">Depositar</a>
+        <a class="dropdown-item" href="./sacar.html">Sacar</a>
+        <a class="dropdown-item" href="./transferir.html">Transferir</a>
       </div>
     </li>
 
   </ul>
+
+    <button id="converte">Converte Saldos</button>
 
     <div class="div-table">
 
@@ -54,7 +56,7 @@
 
     </div>
 
-    <div class="form-transacoes">
+    <!-- <div class="form-transacoes">
 
       <h4>Transações Financeiras</h4>
 
@@ -100,7 +102,7 @@
   
       </form>  
 
-    </div>
+    </div> -->
 
 
 </body>
