--- a/depositar.html
+++ b/depositar.html
@@ -43,7 +43,7 @@
         <fieldset>
           <legend>Depositar</legend> <br>
           <label for="valorDeposito">R$ </label>
-          <input type="text" name="deposito" id="valorDeposito" onkeyup="formataValor(this)" placeholder="Ex: 50,00" required>
+          <input type="text" name="deposito" id="valorDeposito" placeholder="Ex: 50,00" required>
           <label for="destinatario">Para: </label>
           <select name="destinatario" id="destinatario" style="width: 200px;" multiple>
   
