--- a/sacar.html
+++ b/sacar.html
@@ -43,7 +43,7 @@
         <fieldset style="margin-top: 20px;">
           <legend>Sacar</legend> <br>
           <label for="valorSaque">R$ </label>
-          <input type="number" name="saque" id="valorSaque" placeholder="Ex: 50.00" required>
+          <input type="text" name="saque" id="valorSaque" placeholder="Ex: 50.00" required>
           <label for="cliente">De: </label>
           <input list='cliente-options' name="cliente" id="cliente">
           <datalist id="cliente-options"> 
