--- a/transferir.html
+++ b/transferir.html
@@ -43,7 +43,7 @@
       <fieldset style="margin-top: 20px;">
         <legend>Transferir</legend> <br>
         <label for="transferencia">R$ </label>
-        <input type="number" name="transferencia" id="valorTransf" placeholder="Ex: 50.00" required>
+        <input type="text" name="transferencia" id="valorTransf" placeholder="Ex: 50.00" required>
         <label for="sacado">De: </label>
         <input type="text" name="sacado" id="sacado" required>
         <label for="beneficiario">Para: </label>
